Pull request #7: Feature/fixed models for grafanalys
Merge in RDL/mimer-datamodels from feature/fixed-models-for-grafanalys to develop

Squashed commit of the following:

commit 45125b9e7da67ae02c5a0f578f3767aa7df95680
Author: Henriksson Joar (4004) <199506187393@ads.sfa.se>
Date:   Tue Nov 11 09:33:54 2025 +0100

    bumped the wrong version

commit 5647ed2e6217ecf12373ae4ca84d6bcb96f8d909
Author: Henriksson Joar (4004) <199506187393@ads.sfa.se>
Date:   Tue Nov 11 09:10:21 2025 +0100

    pipeline workaround

commit 9257ac10fc9d674f2104a3da6e0c4f0073ca839c
Author: Henriksson Joar (4004) <199506187393@ads.sfa.se>
Date:   Fri Nov 7 12:53:24 2025 +0100

    using new catalog

commit 2af43676625c2f09078b0d1a981320e9056ef3d1
Author: Henriksson Joar (4004) <199506187393@ads.sfa.se>
Date:   Wed Nov 5 12:48:07 2025 +0100

    fixed avslagsanledning and test

commit ab9436a40c0dfd61d7c4121bd5f4543841e99ec6
Author: Henriksson Joar (4004) <199506187393@ads.sfa.se>
Date:   Wed Oct 29 15:26:45 2025 +0100

    fixed id validation of person

commit 90327a7a4c7d0caed6984b005e17a2d6a3b025ed
Author: Henriksson Joar (4004) <199506187393@ads.sfa.se>
Date:   Wed Oct 29 15:15:58 2025 +0100

    fixed models for grafanalys